Added latex table (to be merged with main table)

--- a/Notebooks/Ciprofloxacin/Gam_overexpression.ipynb
+++ b/Notebooks/Ciprofloxacin/Gam_overexpression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -232,18 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/media/daniel/HDD Daniel/DanielThedie/Python/PyBerries/pyberries/data/Fitting.py:35: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  for name, data in df_in.groupby(groupby, sort=False):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hist = get_histogram(data.RecB_spots, col='TrackLength', binsize=1, groupby=['Dataset','Group','Cipro','Strain'], density=True, binlabels='left')\n",
     "monoexp_fit = Fit(hist, x='TrackLength', y='proportion', model_type='monoexp_decay',\n",
@@ -368,36 +359,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Group ('240227_1', '0 ng/ml, Gam', '0 ng/ml', 'Gam'): 7 iterations failed\n",
-      "Group ('240227_3', '0 ng/ml, Gam', '0 ng/ml', 'Gam'): 3 iterations failed\n",
-      "Group ('230719_1', '0 ng/ml, WT', '0 ng/ml', 'WT'): 2 iterations failed\n",
-      "Group ('240424_1', '0 ng/ml, WT', '0 ng/ml', 'WT'): 1 iterations failed\n",
-      "Group ('240612_1', '0 ng/ml, WT', '0 ng/ml', 'WT'): 5 iterations failed\n",
-      "Group ('240620_1', '0 ng/ml, WT', '0 ng/ml', 'WT'): 2 iterations failed\n",
-      "Group ('230118_DT23', '30 ng/ml, WT', '30 ng/ml', 'WT'): 1 iterations failed\n",
-      "Group ('230726_cipro30', '30 ng/ml, WT', '30 ng/ml', 'WT'): 1 iterations failed\n",
-      "Group ('230824_1', '30 ng/ml, WT', '30 ng/ml', 'WT'): 1 iterations failed\n",
-      "Group ('230829_1', '30 ng/ml, WT', '30 ng/ml', 'WT'): 1 iterations failed\n",
-      "Group ('230201_DT23', '30 ng/ml, WT', '30 ng/ml', 'WT'): 1 iterations failed\n",
-      "Group ('230504_2sec', '30 ng/ml, WT', '30 ng/ml', 'WT'): 1 iterations failed\n",
-      "Group ('240612_2', '30 ng/ml, WT', '30 ng/ml', 'WT'): 2 iterations failed\n",
-      "Group ('240227_4', '30 ng/ml, Gam', '30 ng/ml', 'Gam'): 2 iterations failed\n",
-      "Group ('240301_1', '30 ng/ml, Gam', '30 ng/ml', 'Gam'): 1 iterations failed\n",
-      "Group ('240301_2', '30 ng/ml, Gam', '30 ng/ml', 'Gam'): 1 iterations failed\n"
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/pandas/core/arraylike.py:396: RuntimeWarning: overflow encountered in exp\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "/home/daniel/miniconda3/envs/pyberries_dev/lib/python3.11/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n"
      ]
     }
    ],
    "source": [
     "hist = get_histogram(data.RecB_spots, col='TrackLength', binsize=1, groupby=['Dataset','Group','Cipro','Strain'], density=True, binlabels='left')\n",
     "biexp_fit = Fit(hist, x='TrackLength', y='proportion', model_type='biexp_decay',\n",
-    "                   groupby=['Dataset','Group','Cipro','Strain'], p0=[1, 1, 0.1, 0.1], bootstrap_samples=20)"
+    "                   groupby=['Dataset','Group','Cipro','Strain'], p0=[1, 1, 0.1, 0.1], bootstrap_samples=100)"
    ]
   },
   {
@@ -409,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -506,46 +505,24 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">0 ng/ml, Gam</th>\n",
        "      <th>Short</th>\n",
-       "      <td>1.6 $\\pm$ 0.2</td>\n",
-       "      <td>99.0 $\\pm$ 0.6</td>\n",
+       "      <td>1.7 $\\pm$ 0.2</td>\n",
+       "      <td>99.2 $\\pm$ 0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Long</th>\n",
-       "      <td>12.6 $\\pm$ 7.3</td>\n",
-       "      <td>1.0 $\\pm$ 0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">0 ng/ml, WT</th>\n",
-       "      <th>Short</th>\n",
-       "      <td>1.4 $\\pm$ 0.2</td>\n",
-       "      <td>98.4 $\\pm$ 0.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Long</th>\n",
-       "      <td>9.0 $\\pm$ 2.6</td>\n",
-       "      <td>1.6 $\\pm$ 0.8</td>\n",
+       "      <td>15.5 $\\pm$ 9.1</td>\n",
+       "      <td>0.8 $\\pm$ 0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">30 ng/ml, Gam</th>\n",
        "      <th>Short</th>\n",
        "      <td>1.5 $\\pm$ 0.1</td>\n",
-       "      <td>98.6 $\\pm$ 0.5</td>\n",
+       "      <td>98.2 $\\pm$ 0.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Long</th>\n",
-       "      <td>8.8 $\\pm$ 0.9</td>\n",
-       "      <td>1.4 $\\pm$ 0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">30 ng/ml, WT</th>\n",
-       "      <th>Short</th>\n",
-       "      <td>1.7 $\\pm$ 0.3</td>\n",
-       "      <td>94.3 $\\pm$ 1.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Long</th>\n",
-       "      <td>9.8 $\\pm$ 1.4</td>\n",
-       "      <td>5.7 $\\pm$ 1.2</td>\n",
+       "      <td>8.2 $\\pm$ 1.8</td>\n",
+       "      <td>1.8 $\\pm$ 0.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -554,18 +531,34 @@
       "text/plain": [
        "                          Lifetime (sec) Proportion (\\%)\n",
        "Ciprofloxacin Population                                \n",
-       "0 ng/ml, Gam  Short        1.6 $\\pm$ 0.2  99.0 $\\pm$ 0.6\n",
-       "              Long        12.6 $\\pm$ 7.3   1.0 $\\pm$ 0.6\n",
-       "0 ng/ml, WT   Short        1.4 $\\pm$ 0.2  98.4 $\\pm$ 0.8\n",
-       "              Long         9.0 $\\pm$ 2.6   1.6 $\\pm$ 0.8\n",
-       "30 ng/ml, Gam Short        1.5 $\\pm$ 0.1  98.6 $\\pm$ 0.5\n",
-       "              Long         8.8 $\\pm$ 0.9   1.4 $\\pm$ 0.5\n",
-       "30 ng/ml, WT  Short        1.7 $\\pm$ 0.3  94.3 $\\pm$ 1.2\n",
-       "              Long         9.8 $\\pm$ 1.4   5.7 $\\pm$ 1.2"
+       "0 ng/ml, Gam  Short        1.7 $\\pm$ 0.2  99.2 $\\pm$ 0.4\n",
+       "              Long        15.5 $\\pm$ 9.1   0.8 $\\pm$ 0.4\n",
+       "30 ng/ml, Gam Short        1.5 $\\pm$ 0.1  98.2 $\\pm$ 0.9\n",
+       "              Long         8.2 $\\pm$ 1.8   1.8 $\\pm$ 0.9"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llll}\n",
+      "\\toprule\n",
+      " &  & Lifetime (sec) & Proportion (\\%) \\\\\n",
+      "Ciprofloxacin & Population &  &  \\\\\n",
+      "\\midrule\n",
+      "\\multirow[t]{2}{*}{0 ng/ml, Gam} & Short & 1.7 $\\pm$ 0.2 & 99.2 $\\pm$ 0.4 \\\\\n",
+      " & Long & 15.5 $\\pm$ 9.1 & 0.8 $\\pm$ 0.4 \\\\\n",
+      "\\cline{1-4}\n",
+      "\\multirow[t]{2}{*}{30 ng/ml, Gam} & Short & 1.5 $\\pm$ 0.1 & 98.2 $\\pm$ 0.9 \\\\\n",
+      " & Long & 8.2 $\\pm$ 1.8 & 1.8 $\\pm$ 0.9 \\\\\n",
+      "\\cline{1-4}\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -577,6 +570,7 @@
     "        return df\n",
     "\n",
     "df = (lifetimes\n",
+    "      .query('Group == \"0 ng/ml, Gam\" or Group == \"30 ng/ml, Gam\"')\n",
     "      .pipe(lambda df: pd.pivot_table(df, values='value', index=['Group', 'Dataset', 'Rate_type'], columns='Parameter'))\n",
     "      .groupby(['Group', 'Rate_type'], observed=True)\n",
     "      .agg(Lifetime_mean=('Lifetime', 'mean'),\n",
@@ -592,7 +586,8 @@
     "      .reindex(['Short', 'Long'], level=1)\n",
     "      )\n",
     "\n",
-    "display(df)"
+    "display(df)\n",
+    "print(df.to_latex())"
    ]
   },
   {
