--- a/Results.tex
+++ b/Results.tex
@@ -53,8 +53,14 @@ To test whether the duration of ciprofloxacin exposure had an effect on spot lif
 \end{table}
 
 % Gam
-To determine whether both short- and long-lived spots resulted from RecB binding to DNA, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DNA. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, due to the inability of the RecBCD-Gam complex to bind to DSBs. The resulting RecB spot lifetime histograms showed a near-complete disappearance of the long-lived spots, while short-lived ones were still present (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). This was confirmed by fitting the histogram with our bi-exponential decay model, which found a proportion of long-lived spots (1.4\% $\pm$ 0.5) similar to wild-type cells that were not exposed to ciprofloxacin (1.8\% $\pm$ 1, Table \ref{tab:fit_results}). The residual amount of long-lived RecB spots in the presence of Gam could be due to residual DNA binding despite the presence of Gam. This residual binding could also be the cause for the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). Since Gam overexpression prevents RecB binding to DNA ends, and specifically caused long-lived spots to disappear, we can conclude that long-lived spots correspond to RecB molecules that have bound to DNA. Given that under Gam overexpression, 95\% of RecB spots were shorter than 10 sec (Figure \ref{Fig:recruitment}A), we considered any spot with a lifetime over 10 sec to be a DNA-bound RecB molecule. The nature of short-lived spots is more difficult to determine, and might be a combination of short-lived DNA binding, and slow diffusion of the RecBCD-Gam-Halo complex (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Therefore, spots that are visible for less than 10 seconds cannot be reliably assigned as either DNA-bound or freely diffusing.
+To determine whether short- or long-lived spots resulted from RecB binding to DNA leading to SOS induction, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DSBs. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, due to the inability of the RecBCD-Gam complex to bind to DSBs and load RecA. The resulting RecB spot lifetimes showed a similar distribution to the one obtained in the absence of ciprofloxacin (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). This was confirmed by fitting the histogram with our bi-exponential decay model, which found a proportion of long-lived spots in the presence of 30 ng/ml ciprofloxacin (1.8\% $\pm$ 0.9, Table \ref{tab:fit_results}) equivalent to wild-type cells that were not exposed to ciprofloxacin (1.8\% $\pm$ 1). The residual amount of long-lived RecB spots in the presence of Gam could be due to residual DNA binding despite the presence of Gam. This residual binding could also be the cause for the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). Since Gam overexpression prevents RecB binding to DNA ends, and specifically caused long-lived spots to disappear, we can conclude that long-lived spots correspond to RecB molecules that have bound to DNA. Given that under Gam overexpression, 95\% of RecB spots were shorter than 10 sec (Figure \ref{Fig:recruitment}A), we considered any spot with a lifetime over 10 sec to be a DNA-bound RecB molecule. The appearance of short-lived spots in the presence of Gam is likely due to a combination of short-lived DNA binding and slow, confined diffusion of the RecBCD-Gam-Halo complex (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Therefore, spots that are visible for less than 10 seconds cannot be reliably assigned as either DNA-bound or not.
 
+Using the Gam protein allowed us to identify DNA-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to DNA for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration.
+
+% RecB binding time in the mutants
+Since RecB binding time was not affected by the level of DNA damage, we investigated whether it was affected by the following step in the repair process, the loading of RecA on DNA. We therefore imaged RecB in two mutant strains, \dreca\ and \geneteneighty. As for the wild-type strain, we computed histograms of RecB spot lifetimes, and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the binding times of RecB on DNA (Figure \ref{Fig:mutants}B). In the \dreca\ mutant, the DNA-binding lifetime of RecB was similar to the wild-type ($\sim$10 sec), both in the presence and absence of ciprofloxacin. This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of wild-type RecBCD from DNA. In contrast, \teneighty\ stayed bound to DNA for longer on average than wild-type RecB ($\sim$16 sec). This could be due to the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging due to the DNA strands threading through the RecBCD complex.
+
+% Part 2: Rate of recruitment of RecB on the DNA
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=.4\textwidth]{Figures/Fig2_RecB_recruitment.pdf}
@@ -62,10 +68,16 @@ To determine whether both short- and long-lived spots resulted from RecB binding
     \label{Fig:recruitment}
 \end{figure}
 
-%% Rate of recruitment of RecB on the DNA
+% RecB recruitment in WT
 Whereas the lifetime of the fluorescent spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition (Figure \ref{Fig:recruitment}B). We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to the DNA per hour on average. This is roughly consistent with the previous estimate of 18\% of cells generating an endogenous DSB per cell cycle\cite{Sinha2018}. At ciprofloxacin concentrations above the MIC (30 ng/ml), the recruitment rate increased to an average of 5 RecB recruited to DNA per hour. Furthermore, we expect that this recruitment rate gives a close estimate of the rate of formation of DSBs by ciprofloxacin (see discussion).
 
-% Part 2: Effects of DSBs and the repair process on the cell
+% RecB recruitment in mutants
+
+
+% Part 3: Colocalisation of RecB with the nucleoid
+
+
+% Part 4: Imaging RecA foci and filaments (to be moved to the end)
 \subsection*{Ciprofloxacin exposure induces formation of RecA filaments and nucleoid compaction}
 
 \begin{figure*}[htbp]
@@ -96,9 +108,6 @@ As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figur
 
 % Effect of ciprofloxacin exposure on the different mutants
 Imaging RecB binding to DSBs in the presence of different concentrations of ciprofloxacin allowed us to determine that the amount of DNA damage experienced by the cells did not influence the time spent by RecB on DNA (Table \ref{tab:fit_results}). Next, we wanted to test whether RecB dissociation from DNA was influenced by RecA loading. Therefore, we imaged the \dreca\ and \teneighty\ mutants in the presence and absence of 30 ng/ml ciprofloxacin. Figure \ref{Fig:mutants}A shows brightfield images of cells that were not exposed to ciprofloxacin, and cells that were exposed to 30 ng/ml ciprofloxacin for 60 min. Supp. Figure \ref{SIFig:mutants_cell_lengths} shows the average cell lengths in the different conditions and ciprofloxacin exposure durations. As previously observed, wild-type cells show a clear response to exposure to 30 ng/ml ciprofloxacin, where the cell length increases significantly due to induction of the SOS response. In contrast to this, since the \dreca\ mutant is unable to form a RecA filament, it is also unable to induce the SOS response. Cell length therefore remains unchanged, even upon prolonged exposure to 30 ng/ml ciprofloxacin. In the absence of ciprofloxacin, the \teneighty\ mutant cells were slightly more elongated than wild-type cells. This matches previous indications that this mutant has a higher baseline of SOS induction than wild-type cells in the absence of exogenous DNA damage\cite{Lepore2023}. Upon exposure to ciprofloxacin, the cell length of the \teneighty\ mutant increased, albeit slightly less on average than the wild-type's (Supp. Figure \ref{SIFig:mutants_cell_lengths}). This might be a reflection of \teneighty's inability to directly load RecA on the DNA, and the use of the alternative RecFOR pathway leading to different time dynamics of the SOS response\cite{Ivancic-Bace_2003,Lepore2023}.
-
-% DNA binding lifetimes
-As for the wild-type strain, we computed histograms of RecB spot lifetimes, and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the binding times of RecB on DNA (Figure \ref{Fig:mutants}B). In the \dreca\ mutant, the DNA-binding lifetime of RecB was similar to the wild-type ($\sim$10 sec). This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of RecBCD from DNA. Both in the presence and absence of ciprofloxacin, \teneighty\ stayed bound to DNA for longer on average than wild-type RecB ($\sim$16 sec). This could be due to the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging due to the DNA strands threading through the RecBCD complex.
 
 % RecB recruitment rate
 Estimating the recruitment rate of RecB to DNA provided additional insight into the dynamics of DSB processing in the \dreca\ and \teneighty\ mutants (Figure \ref{Fig:mutants}C). In the \dreca\ mutant, the rate of recruitment of RecB was increased compared to wild-type cells, both in the presence and absence of ciprofloxacin. As in both cases the rate of DSB formation is expected to be the same between the wild-type and the \dreca\ mutant, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB. In the mutant cells, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as SbcCD. Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome degradation\cite{Capaldo1975,Skarstad1993}. In our experiment, it results in multiple recruitments of RecB to DNA for each DSB.
