Added ref on DNA degradation by SbcCD in drecA

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -976,3 +976,19 @@ The authors have declared no competing interest.},
    url = {https://journals.asm.org/doi/10.1128/aac.02487-19},
    year = {2020},
 }
+@article{Zahradka2009,
+   abstract = {Exponentially growing recA mutant cells of Escherichia coli display pronounced DNA degradation that starts at the sites of DNA damage and depends on RecBCD nuclease (ExoV) activity. As a consequence of this "reckless" DNA degradation, populations of recA mutants contain a large proportion of anucleate cells. We have found that both DNA degradation and anucleate-cell production are efficiently suppressed by mutations in the xonA (sbcB) and sbcD genes. The suppressive effects of these mutations were observed in normally grown, as well as in UV-irradiated, recA cells. The products of the xonA and sbcD genes are known to code for the Exol and SbcCD nucleases, respectively. Since both xonA and sbcD mutations are required for strong suppression of DNA degradation while individual mutations have only a weak suppressive effect, we infer that Exol and SbcCD play partially redundant roles in regulating DNA degradation in recA cells. We suggest that their roles might be in processing (blunting) DNA ends, thereby producing suitable substrates for RecBCD binding. Copyright © 2009, American Society for Microbiology. All Rights Reserved.},
+   author = {Ksenija Zahradka and Maja Buljubašić and Mirjana Petranović and Davor Zahradka},
+   doi = {10.1128/jb.01877-07},
+   issn = {00219193},
+   issue = {5},
+   journal = {Journal of Bacteriology},
+   month = {3},
+   pages = {1677-1687},
+   pmid = {19074388},
+   publisher = {American Society for Microbiology},
+   title = {Roles of exol and SbcCD nucleases in "Reckless" DNA degradation in recA mutants of Escherichia coli},
+   volume = {191},
+   url = {https://journals.asm.org/doi/10.1128/jb.01877-07},
+   year = {2009},
+}
