--- a/Methods.tex
+++ b/Methods.tex
@@ -63,7 +63,7 @@ The binding time of individual RecB molecules on DNA was extracted in BACMMAN as
 Because we were unable to differentiate whether the disappearance of a fluorescent spot was due to photobleaching or to unbinding and returning to the pool of diffusing molecules, we considered that the fitted "spot disappearance rates" $k_1$ and $k_2$ were a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
 
 \paragraph*{Estimation of the rate of RecB recruitment to DNA}
-For each timelapse, we quantified the total number of RecB spots that were bound to DNA. This could not be achieved by thresholding on the lifetime histograms, as a significant number of short-lived spots correspond to DNA-bound RecB molecules. To estimate the total number of DNA-bound RecB, we considered that all RecB spots that disappeared with a slower rate (as determined by the bi-exponential decay fit) were DNA-bound, and the spots that disappeared with a faster rate were slow-diffusing complexes. We multiplied the total number of spots that appeared during the timelapse by the proportion of slow-dissociating spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DNA-bound RecB per timelapse, from which a number of recruitment events per hour can be calculated.
+For each timelapse, we quantified the total number of RecB spots that were bound to DNA. This could not be achieved by thresholding on the lifetime histograms, as a significant number of short-lived spots correspond to DNA-bound RecB molecules. To estimate the total number of DNA-bound RecB, we considered that all RecB spots that disappeared with a slower rate (as determined by the bi-exponential decay fit) were DNA-bound, and the spots that disappeared with a faster rate were slow-diffusing complexes. We multiplied the total number of spots that appeared during the timelapse by the proportion of slow-dissociating spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DNA-bound RecB per timelapse, from which a number of recruitment events per cell per hour was calculated. This rate was corrected for photobleaching of the fluorescent dye, to account for non-fluorescent RecBCD complexes binding to DSBs.
 
 \subsection*{Code availability}
 Instructions to install the BACMMAN ImageJ plugin can be found on the \href{https://github.com/jeanollion/bacmman/wiki/Installation}{BACMMAN wiki}. The PyBerries package can be found on the \href{https://pypi.org/project/PyBerries/}{Python Package Index}, and its source code is available on \href{https://gitlab.com/MEKlab/pyberries}{Gitlab}. The deep-learning model used to classify cells according to their RecA-associated fluorescence is available on \href{https://gitlab.com/MEKlab/bacmman-object-classifier}{Gitlab}. The Jupyter Notebooks used to make the article figures are available on \href{https://github.com/DanielThedie/RecB_article}{Github}.
