Changed Gam fits to a comparison with WT

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -147,12 +147,12 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SIFig:Gam_cell_length}
 \end{suppfigure*}
 
-% Bi-exponential fit of RecB spot lifetimes under Gam over-expression, 0 and 30 ng/mL cipro
+% RecB spot lifetimes under Gam over-expression, 0 and 30 ng/mL cipro
 \begin{suppfigure*}[htbp]
     \begin{center}
-    \includegraphics[width=0.6\linewidth]{SI_Figures/Gam_lifetimes_fits.pdf}
+    \includegraphics[width=0.75\linewidth]{SI_Figures/Gam_lifetimes_vs_WT.pdf}
     \end{center}
-    \caption{\textbf{(A)} Histograms of RecB spot lifetime (bars) in cells over-expressing the Gam protein with overlaid bi-exponential decay fits ($y=a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$, black line) and individual fit components (dashed lines). \ncells{8,812}. \nspots{18,698} \textbf{(B)} Zoom on the tail of the histograms from (A).}
+    \caption{\textbf{(A)} Histograms of RecB spot lifetimes for wild-type cells (coloured bars) and cells overexpressing Gam (dashes). \ncells{41,403}. \nspots{96,453} \textbf{(B)} Zoom on the tail of the histograms from (A).}
     \label{SIFig:Gam_RecB_lifetimes_fits}
 \end{suppfigure*}
 
