Updated nucleoid Figure

--- a/Results.tex
+++ b/Results.tex
@@ -113,9 +113,9 @@ In the \geneteneighty\ mutant, RecB recruitment is higher than in WT cells, but 
 % Part 3: Colocalisation of RecB with the nucleoid (to be reviewed/adjusted)
 \begin{figure*}[htbp]
     \centering
-    \includegraphics[width=.8\textwidth]{Figures/Fig3_cell_response.pdf}
-    \caption{Bacterial cell response to the induction of DSBs by ciprofloxacin. \textbf{(A)} Representative images of cells (segmented outline in grey) showing the nucleoid (green) and RecB-associated fluorescence (magenta). RecB spots (indicated by arrows) are located in close proximity to the nucleoid. \textbf{(B)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis, for different ciprofloxacin concentrations (0 to 30 ng/ml). \ncells{24,014}. \nspots{79,969}. \nnucl{31,441}. \textbf{(C)}  \textbf{(D)}}
-    \label{Fig:reca_nucleoid}
+    \includegraphics[width=.8\textwidth]{Figures/Fig4_nucleoid.pdf}
+    \caption{Colocalisation of RecB spots with the bacterial nucleoid. \textbf{(A)} Representative images of cells (segmented outline in grey) showing the nucleoid (green) and RecB-associated fluorescence (magenta). RecB spots (indicated by arrows) are located in close proximity to the nucleoid. \textbf{(B)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis, for different ciprofloxacin concentrations (0 to 30 ng/ml). \ncells{24,014}. \nspots{79,969}. \nnucl{31,441}. \textbf{(C)} Representative overlay images of RecB-associated fluorescence (magenta) and the bacterial nucleoid (green) in the \dreca\ and \geneteneighty\ mutants. Segmented cell outline shown in grey. \textbf{(D)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis for the \dreca\ and \geneteneighty\ mutants. \ncells{7,804}. \nspots{36,595}. \nnucl{11,215}.}
+    \label{Fig:nucleoid}
 \end{figure*}
 
 % Nucleoid imaging
@@ -138,12 +138,12 @@ During processing of DSBs, RecBCD facilitates the loading of the RecA protein on
 
 
 
-\begin{figure*}[htbp]
-    \centering
-    \includegraphics[width=.75\textwidth]{Figures/Fig4_mutants.pdf}
-    \caption{RecB binding to DNA in the \dreca\ and \geneteneighty\ mutant strains in the absence and presence of ciprofloxacin (30 ng/ml). \textbf{(A)} Representative brightfield images of wild-type (WT), \dreca\ and \geneteneighty\ mutants cells, in the presence and absence of ciprofloxacin (30 ng/ml). \textbf{(B)} Fitted lifetimes of RecB molecules on DNA. Black dots show individual datasets, and bars the median values. \ncells{56,131}. \nspots{177,646}. \textbf{(C)} Rate of recruitment of RecB to the DNA. Black dots show individual datasets, and bars the median values. \ncells{56,131}. \nspots{177,646}. \textbf{(D)} Representative overlay images of RecB-associated fluorescence (magenta) and the bacterial nucleoid (green). Segmented cell outline shown in grey. \textbf{(E)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis. \ncells{15,029}. \nspots{58,331}. \nnucl{20,831}.}
-    \label{Fig:mutants}
-\end{figure*}
+% \begin{figure*}[htbp]
+%     \centering
+%     \includegraphics[width=.75\textwidth]{Figures/Fig4_mutants.pdf}
+%     \caption{RecB binding to DNA in the \dreca\ and \geneteneighty\ mutant strains in the absence and presence of ciprofloxacin (30 ng/ml). \textbf{(A)} Representative brightfield images of wild-type (WT), \dreca\ and \geneteneighty\ mutants cells, in the presence and absence of ciprofloxacin (30 ng/ml). \textbf{(B)} Fitted lifetimes of RecB molecules on DNA. Black dots show individual datasets, and bars the median values. \ncells{56,131}. \nspots{177,646}. \textbf{(C)} Rate of recruitment of RecB to the DNA. Black dots show individual datasets, and bars the median values. \ncells{56,131}. \nspots{177,646}. \textbf{(D)} Representative overlay images of RecB-associated fluorescence (magenta) and the bacterial nucleoid (green). Segmented cell outline shown in grey. \textbf{(E)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis. \ncells{15,029}. \nspots{58,331}. \nnucl{20,831}.}
+%     \label{Fig:mutants}
+% \end{figure*}
 
 
 % \begin{figure*}[htbp]
