Updates from Overleaf

--- a/Discussion.tex
+++ b/Discussion.tex
@@ -2,7 +2,7 @@
 
 % Accumulation of RecA filaments at high cipro might be due to extensive DNA damage and unsuccessful homology search
 \subsection*{Accumulation of RecA filaments under high DNA damage}
-Under exposure to high ciprofloxacin concentrations (20-30 ng/ml), we observed an accumulation of RecA filaments in cells (Figures \ref{Fig:reca_nucleoid}A and \ref{Fig:reca_nucleoid}B). A these ciprofloxacin concentrations, we have determined that cells undergo frequent DSBs, leading to multiple recruitments of RecB to DNA over the course of the experiment (up to 5 per hour, Figure \ref{Fig:recruitment}B). In these conditions, it would become increasingly likely for all copies of a locus to be damaged, and the DSB repair pathway to be stuck at the step of homology searching.
+Under exposure to high ciprofloxacin concentrations (20-30 ng/ml), we observed an accumulation of RecA filaments in cells (Figures \ref{Fig:reca_nucleoid}A and \ref{Fig:reca_nucleoid}B). At these ciprofloxacin concentrations, we have determined that cells undergo frequent DSBs, leading to multiple recruitments of RecB to DNA over the course of the experiment (up to 5 per hour, Figure \ref{Fig:recruitment}B). In these conditions, it would become increasingly likely for all copies of a locus to be damaged, and the DSB repair pathway to be stuck at the step of homology searching.
 
 \subsection*{Multiple RecB recruitments per DSB in the $\mathbf{\Delta}$\emph{reca} and RecB$\mathbf{_{1080}}$ mutants}
 
