--- a/Article.tex
+++ b/Article.tex
@@ -7,7 +7,7 @@
 \usepackage{upgreek}
 
 \newcommand{\dreca}{$\Delta$\textit{recA}} % ΔrecA
-\newcommand{\teneighty}{recB$_{1080}$} % RecB1080
+\newcommand{\teneighty}{RecB$_{1080}$} % RecB1080
 \newcommand{\geneteneighty}{\textit{recB$_{1080}$}} % recB1080
 \newcommand{\od}{OD$_{600}$} % OD600
 \newcommand{\umsq}{$\upmu$m$^2$} % µm2
